Attempt to fix image overlap

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -50,7 +50,6 @@
 }
 
 .backdrop-image {
-    width: 50%;
     height: 100vh;
     z-index: -1;
     position: absolute;
